changed to array

--- a/index.html
+++ b/index.html
@@ -14,74 +14,13 @@
   <header>
     <h1>Fruity Finds</h1>
   </header>
+  <section>
+    Score Area
+  </section>
   <div class="container">
-    <section>
-      Score Panel
-      <div>
-        Tries
-      </div>
-      <div>
-        Score
-      </div>
-    </section>
-    <div class="deck" id="card-deck">
-      <!-- <div> -->
-        <div class="card" type="apple">
-            <img src="images/apple.png" alt="">
-        </div>
-        <div class="card" type="apricot">
-            <img src="images/apricot.png" alt="">
-        </div>
-        <div class="card" type="banana">
-            <img src="images/banana.png" alt="">
-        </div>
-        <div class="card" type="cherry">
-            <img src="images/cherry.png" alt="">
-        </div>
-      <!-- </div> -->
-      <!-- <div> -->
-        <div class="card" type="grapes">
-            <img src="images/grapes.png" alt="">
-        </div>
-        <div class="card" type="lemon">
-            <img src="images/lemon.png" alt="">
-        </div>
-        <div class="card" type="orange">
-            <img src="images/orange.png" alt="">
-        </div>
-        <div class="card" type="strawberries">
-            <img src="images/strawberries.png" alt="">
-        </div>
-      <!-- </div> -->
-      <!-- <div> -->
-        <div class="card" type="apple">
-            <img src="images/apple.png" alt="">
-        </div>
-        <div class="card" type="apricot">
-            <img src="images/apricot.png" alt="">
-        </div>
-        <div class="card" type="banana">
-            <img src="images/banana.png" alt="">
-        </div>
-        <div class="card" type="cherry">
-            <img src="images/cherry.png" alt="">
-        </div>
-      <!-- </div>
-      <div> -->
-        <div class="card" type="grapes">
-            <img src="images/grapes.png" alt="">
-        </div>
-        <div class="card" type="lemon">
-            <img src="images/lemon.png" alt="">
-        </div>
-        <div class="card" type="orange">
-            <img src="images/orange.png" alt="">
-        </div>
-        <div class="card" type="strawberries">
-            <img src="images/strawberries.png" alt="">
-        </div>
-      <!-- </div> -->
-    </div>
-</div>
+    <ul id="cardDeck">
+      <li class="card"><img src="images/apple.png" alt=""></li>
+    </ul>
+  </div>
 </body>
 </html>
