removed font-awesome

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Fruity Finds</title>
   <script src="client.js"></script>
+  <link rel="stylesheet" href="vendors/fontawesome/fontawesome-all.css">
   <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="style.css">
 
@@ -20,6 +21,11 @@
   <div class="container">
     <ul id="cardDeck">
       <li class="card"><img src="images/apple.png" alt=""></li>
+      <li><i class="fas fa-bicycle"></i></li>
+    </ul>
+
+    <ul>
+      <li
     </ul>
   </div>
 </body>
