--- a/index.html
+++ b/index.html
@@ -4,29 +4,44 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Fruity Finds</title>
-  <script src="client.js"></script>
-  <link rel="stylesheet" href="vendors/fontawesome/fontawesome-all.css">
+  <title>Memory Matcher</title>
+  <link rel="stylesheet" href="vendors/fontawesome-all.min.css">
   <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
+  <div>
   <header>
-    <h1>Fruity Finds</h1>
+    <h1>Memory Matcher</h1>
   </header>
   <section>
     Score Area
   </section>
   <div class="container">
-    <ul id="cardDeck">
-      <li class="card"><img src="images/apple.png" alt=""></li>
-      <li><i class="fas fa-bicycle"></i></li>
-    </ul>
-
-    <ul>
-      <li
-    </ul>
+    <div class="deck" id="cardDeck">
+      <div class="card" type="bicycle"><i class="fas fa-bicycle"></i></div>
+      <div class="card" type="bus"><i class="fas fa-bus"></i></div>
+      <div class="card" type="rocket"><i class="fas fa-rocket"></i></div>
+      <div class="card" type="car"><i class="fas fa-car"></i></div>
+      <div class="card" type="shuttle"><i class="fas fa-space-shuttle"></i></div>
+      <div class="card" type="truck"><i class="fas fa-truck"></i></div>
+      <div class="card" type="plane"><i class="fas fa-plane"></i></div>
+      <div class="card" type="motorcycle"><i class="fas fa-motorcycle"></i></div>
+      <div class="card" type="train"><i class="fas fa-train"></i></div>
+      <div class="card" type="ship"><i class="fas fa-ship"></i></div>
+      <div class="card" type="bicycle"><i class="fas fa-bicycle"></i></div>
+      <div class="card" type="bus"><i class="fas fa-bus"></i></div>
+      <div class="card" type="rocket"><i class="fas fa-rocket"></i></div>
+      <div class="card" type="car"><i class="fas fa-car"></i></div>
+      <div class="card" type="shuttle"><i class="fas fa-space-shuttle"></i></div>
+      <div class="card" type="truck"><i class="fas fa-truck"></i></div>
+      <div class="card" type="plane"><i class="fas fa-plane"></i></div>
+      <div class="card" type="motorcycle"><i class="fas fa-motorcycle"></i></div>
+      <div class="card" type="train"><i class="fas fa-train"></i></div>
+      <div class="card" type="ship"><i class="fas fa-ship"></i></div>
+    </div>
   </div>
+  <script src="client.js" defer="true"></script>
 </body>
 </html>
