timer for class switch to hide non-matches

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,38 +11,80 @@
   <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
   <div>
-  <header>
-    <h1>Memory Matcher</h1>
-  </header>
-  <section>
-    Score Area
-  </section>
-  <div class="container">
-    <div class="deck" id="cardDeck">
-      <div class="card" type="bicycle"><i class="fas fa-bicycle"></i></div>
-      <div class="card" type="bus"><i class="fas fa-bus"></i></div>
-      <div class="card" type="rocket"><i class="fas fa-rocket"></i></div>
-      <div class="card" type="car"><i class="fas fa-car"></i></div>
-      <div class="card" type="shuttle"><i class="fas fa-space-shuttle"></i></div>
-      <div class="card" type="truck"><i class="fas fa-truck"></i></div>
-      <div class="card" type="plane"><i class="fas fa-plane"></i></div>
-      <div class="card" type="motorcycle"><i class="fas fa-motorcycle"></i></div>
-      <div class="card" type="train"><i class="fas fa-train"></i></div>
-      <div class="card" type="ship"><i class="fas fa-ship"></i></div>
-      <div class="card" type="bicycle"><i class="fas fa-bicycle"></i></div>
-      <div class="card" type="bus"><i class="fas fa-bus"></i></div>
-      <div class="card" type="rocket"><i class="fas fa-rocket"></i></div>
-      <div class="card" type="car"><i class="fas fa-car"></i></div>
-      <div class="card" type="shuttle"><i class="fas fa-space-shuttle"></i></div>
-      <div class="card" type="truck"><i class="fas fa-truck"></i></div>
-      <div class="card" type="plane"><i class="fas fa-plane"></i></div>
-      <div class="card" type="motorcycle"><i class="fas fa-motorcycle"></i></div>
-      <div class="card" type="train"><i class="fas fa-train"></i></div>
-      <div class="card" type="ship"><i class="fas fa-ship"></i></div>
+    <header>
+      <h1>Memory Matcher</h1>
+    </header>
+    <section>
+      Score Area
+    </section>
+    <div class="container">
+      <div class="deck" id="cardDeck">
+        <div class="card" type="bicycle">
+          <i class="fas fa-bicycle"></i>
+        </div>
+        <div class="card" type="bus">
+          <i class="fas fa-bus"></i>
+        </div>
+        <div class="card" type="rocket">
+          <i class="fas fa-rocket"></i>
+        </div>
+        <div class="card" type="car">
+          <i class="fas fa-car"></i>
+        </div>
+        <div class="card" type="shuttle">
+          <i class="fas fa-space-shuttle"></i>
+        </div>
+        <div class="card" type="truck">
+          <i class="fas fa-truck"></i>
+        </div>
+        <div class="card" type="plane">
+          <i class="fas fa-plane"></i>
+        </div>
+        <div class="card" type="motorcycle">
+          <i class="fas fa-motorcycle"></i>
+        </div>
+        <div class="card" type="train">
+          <i class="fas fa-train"></i>
+        </div>
+        <div class="card" type="ship">
+          <i class="fas fa-ship"></i>
+        </div>
+        <div class="card" type="bicycle">
+          <i class="fas fa-bicycle"></i>
+        </div>
+        <div class="card" type="bus">
+          <i class="fas fa-bus"></i>
+        </div>
+        <div class="card" type="rocket">
+          <i class="fas fa-rocket"></i>
+        </div>
+        <div class="card" type="car">
+          <i class="fas fa-car"></i>
+        </div>
+        <div class="card" type="shuttle">
+          <i class="fas fa-space-shuttle"></i>
+        </div>
+        <div class="card" type="truck">
+          <i class="fas fa-truck"></i>
+        </div>
+        <div class="card" type="plane">
+          <i class="fas fa-plane"></i>
+        </div>
+        <div class="card" type="motorcycle">
+          <i class="fas fa-motorcycle"></i>
+        </div>
+        <div class="card" type="train">
+          <i class="fas fa-train"></i>
+        </div>
+        <div class="card" type="ship">
+          <i class="fas fa-ship"></i>
+        </div>
+      </div>
     </div>
-  </div>
-  <script src="client.js" defer="true"></script>
+    <script src="client.js" defer="true"></script>
 </body>
+
 </html>
