--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section>
       <h2 class="scoreArea" id="currentScore"></h2>
       <h2 class="scoreArea" id="attempts"></h2>
-      <button><i class="fas fa-redo-alt"></i></button>
+      <button id="startOverBtn"><i class="fas fa-redo-alt"></i></button>
     </section>
       
     <!-- Deck of Cards Game Board> -->
@@ -88,6 +88,15 @@
         </div>
       </div>
     </div>
+
+    <div id="winnerPop">
+      <div id="winnerPopContent">
+        <span class="close"><i class="fas fa-times-circle"></i></span>
+        <p>You win!</p>
+        <button class="playAgain">Play Again</button>
+      </div>
+    </div>
+
     <script src="client.js" defer="true"></script>
 </body>
 
