--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@
 
     <div id="winnerPop">
       <div id="winnerPopContent">
-        <span class="close"><i class="fas fa-times-circle"></i></span>
+        <span id="close"><i class="fas fa-times-circle"></i></span>
         <p>You win!</p>
-        <button class="playAgain">Play Again</button>
+        <i class="fas fa-smile"></i>
+        <button id="playAgain">Play Again</button>
       </div>
     </div>
 
