--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Memory Matcher</title>
+  <title>Motor Matcher</title>
   <link rel="stylesheet" href="vendors/fontawesome-all.min.css">
   <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -15,7 +15,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>Memory Matcher</h1>
+      <h1>Match the Motors!</h1>
     </header>
     
     <section>
