--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Motor Matcher</title>
+  <link rel="shortcut icon" type="image/png" href="favicon.png">
   <link rel="stylesheet" href="vendors/fontawesome-all.min.css">
   <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
