--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Motor Matcher</title>
-  <link rel="shortcut icon" type="image/png" href="favicon.png">
+  <title>Memory</title>
   <link rel="stylesheet" href="vendors/fontawesome-all.min.css">
   <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -16,7 +15,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>Match the Motors!</h1>
+      <h1>Memory Game!</h1>
     </header>
     
     <section>
