--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
       <div id="winnerPopContent">
         <span id="close"><i class="fas fa-times-circle"></i></span>
         <p>You win!</p>
-        <i class="fas fa-smile"></i>
+        <p id="winnerFinalScore"></p>
+        <p id="winnerFinalTries"></p>
+        <i class="fas fa-thumbs-up"></i>
+        <br>
         <button id="playAgain">Play Again</button>
       </div>
     </div>
