add timer, footer, remove dead css

--- a/index.html
+++ b/index.html
@@ -104,15 +104,16 @@
     <div id="winnerPop">
       <div id="winnerPopContent">
         <span id="close"><i class="fas fa-times-circle"></i></span>
-        <p>You win!</p>
+        <p>Yes!</p>
         <p id="winnerFinalScore"></p>
         <p id="winnerFinalTries"></p>
+        <p id="winnerFinalTime"></p>
         <i class="fas fa-thumbs-up"></i>
         <br>
         <button id="playAgain">Play Again</button>
       </div>
     </div>
-
+    <footer>Updated 6.29.2020</footer>
     <script src="client.js" defer="true"></script>
 </body>
 
